Setup for migration to ViewComponent UI

--- a/app/views/layouts/lookbook/skeleton.html.erb
+++ b/app/views/layouts/lookbook/skeleton.html.erb
@@ -16,6 +16,7 @@
     </script>
   <% end %>
   <script src="/lookbook-assets/js/app.js?v=<%= Lookbook.version %>" defer></script>
+  <script src="/lookbook-assets/js/lookbook.js?v=<%= Lookbook.version %>" defer></script>
   <% if params[:lookbook_embed] %>
     <script src="/lookbook-assets/js/embed.js?v=<%= Lookbook.version %>" defer></script>
   <% end %>
