--- a/app/components/lookbook/nav/item/component.html.erb
+++ b/app/components/lookbook/nav/item/component.html.erb
@@ -2,13 +2,13 @@
   
   <%= render_tag href.present? ? :a : :div,
     href: href,
-    class: "flex items-center py-1 select-none cursor-pointer hover:bg-lookbook-nav-item-bg-hover",
+    class: "flex items-center py-1 select-none cursor-pointer text-lookbook-nav-text hover:bg-lookbook-nav-item-hover",
     style: "padding-left: #{left_pad}px",
     x_bind: "bindings.#{href.present? ? "link" : "toggle"}" do %>
     <div class="relative flex items-center">
       <%= render_component :icon, "open ? 'chevron-down' : 'chevron-right'",
         size: 3,
-        class: "mr-1 text-lookbook-nav-chevron absolute -left-4" if children? %>
+        class: "mr-1 text-lookbook-nav-toggle absolute -left-4" if children? %>
       <%= render_component :icon, nav_icon(@item), size: 3.5, class: "mr-1.5 text-lookbook-nav-icon" %>
       <span><%= label %></span>
     </div>
