--- a/app/components/lookbook/param_field/component.html.erb
+++ b/app/components/lookbook/param_field/component.html.erb
@@ -33,7 +33,7 @@
       <% elsif field_type == "toggle" %>
 
         <button type="button"
-          class="<%= value == true ? "bg-lookbook-toggle-bg-active" : "bg-lookbook-toggle-bg" %> relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-input-border-focus"
+          class="<%= value == true ? "bg-lookbook-input-toggle-active" : "bg-lookbook-input-toggle" %> relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-input-border-focus"
           role="switch"
           @click.stop="value = !value">
           <span
