--- a/app/views/layouts/lookbook/page.html.erb
+++ b/app/views/layouts/lookbook/page.html.erb
@@ -32,7 +32,7 @@
       <% end %>
     <% end %>
 
-    <div class="h-full flex-grow">
+    <div class="h-full flex-grow bg-lookbook-page">
       <%= yield %>
     </div>
     
