--- a/app/views/lookbook/previews/show.html.erb
+++ b/app/views/lookbook/previews/show.html.erb
@@ -60,7 +60,7 @@
       </div>
     <% end %>
 
-    <%= layout.pane class: "flex flex-col h-full overflow-hidden bg-lookbook-drawer-bg", x_show: "!$store.inspector.drawer.hidden" do %>
+    <%= layout.pane class: "flex flex-col h-full overflow-hidden bg-lookbook-drawer", x_show: "!$store.inspector.drawer.hidden" do %>
 
       <%= render_component :toolbar do |toolbar| %>
         <% toolbar.section do %>
