Automate basic theme generation

--- a/app/assets/lookbook/css/lookbook.css
+++ b/app/assets/lookbook/css/lookbook.css
@@ -2,9 +2,9 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-@import "./theme.css";
 @import "./tooltip.css";
 
+@import-glob "./themes/*.css";
 @import-glob "../../../components/lookbook/**/*/component.css";
 
 @layer base {
