--- a/app/components/lookbook/viewport/component.html.erb
+++ b/app/components/lookbook/viewport/component.html.erb
@@ -7,7 +7,7 @@
       class="grid bg-white relative -inset-px <%= "grid-cols-[1fr_17px]" if @resize_width %> <%= "grid-rows-[1fr_17px]" if @resize_height %>"
       style="width: calc(100% + 2px); height: calc(100% + 2px)">
       <iframe seamless
-        id="<%= helpers.generate_id("viewport-iframe-", @src) %>",
+        id="<%= generate_id("viewport-iframe-", @src) %>",
         x-ref="iframe"
         class="h-full w-full border border-lookbook-divider"
         :class="{ 'pointer-events-none': reflowing }"
