--- a/app/views/layouts/lookbook/inspector.html.erb
+++ b/app/views/layouts/lookbook/inspector.html.erb
@@ -1,10 +1,7 @@
 <%= content_for :main do %>
-  <main class="h-screen">
-  <% if @error.present? %>
-    <%= render_component :toolbar %>
-  <% end %>    
-  <%= yield %>
-</main>
+  <main class="h-[calc(100vh_-_40px)]">
+    <%= yield %>
+  </main>
 <% end %>
 
 <%= render template: "layouts/lookbook/application" %>
