--- a/app/views/layouts/lookbook/page.html.erb
+++ b/app/views/layouts/lookbook/page.html.erb
@@ -1,38 +1,36 @@
 <%= content_for :main do %>
+   <div class="absolute top-0 left-0 flex items-center">
+      <% if @previous_page %>
+        <a href="<%= page_path @previous_page.lookup_path %>"
+          x-tooltip.theme.lookbook="`Previous page`"
+          class="flex-none p-1">
+          <%= render_component :icon, :chevron_left, size: 5, class: "hover:text-indigo-800" %>
+        </a>
+      <% else %>
+        <span class="flex-none p-1">
+          <%= render_component :icon, :chevron_left, size: 5, class: "opacity-20" %>
+        </span>
+      <% end %>
+
+      <% if @next_page %>
+        <a href="<%= page_path @next_page.lookup_path %>"
+          x-tooltip.theme.lookbook="`Next page`"
+          class="flex-none p-1">
+            <%= render_component :icon, :chevron_right, size: 5, class: "hover:text-indigo-800" %>
+          </a>
+      <% else %>
+        <span class="flex-none p-1">
+          <%= render_component :icon, :chevron_right, size: 5, class: "opacity-20" %>
+        </span>
+      <% end %>
+    </div>
   <div
-    class="flex flex-col h-screen"
+    class="h-[calc(100vh_-_40px)] relative"
     x-data="{}"
     @navigation:complete.window="$refs.scroller.scrollTop = 0">
+   
 
-    <%= render_component :toolbar do |toolbar| %>
-      <% toolbar.section align: :right do %>
-        <% if @previous_page %>
-          <a href="<%= page_path @previous_page.lookup_path %>"
-            x-tooltip.theme.lookbook="`Previous page`"
-            class="flex-none p-1">
-            <%= render_component :icon, :chevron_left, size: 4, class: "hover:text-indigo-800" %>
-          </a>
-        <% else %>
-          <span class="flex-none p-1">
-            <%= render_component :icon, :chevron_left, size: 4, class: "opacity-20" %>
-          </span>
-        <% end %>
-
-        <% if @next_page %>
-          <a href="<%= page_path @next_page.lookup_path %>"
-            x-tooltip.theme.lookbook="`Next page`"
-            class="flex-none p-1">
-              <%= render_component :icon, :chevron_right, size: 4, class: "hover:text-indigo-800" %>
-            </a>
-        <% else %>
-          <span class="flex-none p-1">
-            <%= render_component :icon, :chevron_right, size: 4, class: "opacity-20" %>
-          </span>
-        <% end %>
-      <% end %>
-    <% end %>
-
-    <div class="h-full flex-grow bg-lookbook-page">
+    <div class="h-full bg-lookbook-page">
       <%= yield %>
     </div>
     
