--- a/app/views/lookbook/previews/show.html.erb
+++ b/app/views/lookbook/previews/show.html.erb
@@ -6,23 +6,23 @@
     x_effect: "forceOrientation = (layoutWidth < $store.inspector.minVerticalSplitWidth) ? 'horizontal' : null" do %>
   
     <%= render_component :toolbar do |toolbar| %>
-      <% toolbar.section do %>
+      <% toolbar.section ":class": "layoutResizing && 'overflow-hidden'" do %>
         <%= render_component :tabs,
           "$store.inspector.preview",
           id: "inspector-preview-tabs" do |tabs| %>
           <%= @preview_panels.each do |key, panel| %>
-            <% tabs.tab key, **panel %>
+            <% tabs.tab key, **panel.extract!(:label, :id, :hotkey, :disabled) %>
           <% end %>
         <% end %>
       <% end %>
 
-      <% toolbar.section align: :right, padded: true do %>
+      <% toolbar.section align: :right, padded: true, class: "flex-none" do %>
         <%= render_component :dimensions_display,
           "[data-component=viewport] iframe",
           x_show: "$store.inspector.preview.activeTab === 'preview'" %>
       <% end %>
 
-      <% toolbar.section divide: :left do %>
+      <% toolbar.section divide: :left, class: "flex-none" do %>
         <%= render_component :button_group do |group| %>
           <% if feature_enabled? :pages %>
             <% group.button icon: :code,
@@ -71,17 +71,17 @@
   <%= layout.pane class: "flex flex-col h-full overflow-hidden bg-lookbook-drawer", x_show: "!$store.inspector.drawer.hidden" do %>
 
     <%= render_component :toolbar do |toolbar| %>
-      <% toolbar.section do %>
+      <% toolbar.section ":class": "layoutResizing && 'overflow-hidden'" do %>
         <%= render_component :tabs,
           "$store.inspector.drawer",
           id: "inspector-drawer-tabs" do |tabs| %>
           <%= @drawer_panels.each do |key, panel| %>
-            <% tabs.tab key, **panel %>
+            <% tabs.tab key, **panel.extract!(:label, :id, :hotkey, :disabled) %>
           <% end %>
         <% end %>
       <% end %>
 
-      <% toolbar.section align: :right, divide: :left do %>
+      <% toolbar.section align: :right, divide: :left, class: "flex-none" do %>
         <%= render_component :button_group do |group| %>
 
           <%= @drawer_panels.each do |key, panel| %>
