--- a/app/views/layouts/lookbook/page.html.erb
+++ b/app/views/layouts/lookbook/page.html.erb
@@ -1,36 +1,47 @@
 <%= content_for :main do %>
-   <div class="absolute top-0 left-0 flex items-center">
-      <% if @previous_page %>
-        <a href="<%= page_path @previous_page.lookup_path %>"
-          x-tooltip.theme.lookbook="`Previous page`"
-          class="flex-none p-1">
-          <%= render_component :icon, :chevron_left, size: 5, class: "hover:text-indigo-800" %>
-        </a>
-      <% else %>
-        <span class="flex-none p-1">
-          <%= render_component :icon, :chevron_left, size: 5, class: "opacity-20" %>
-        </span>
-      <% end %>
-
-      <% if @next_page %>
-        <a href="<%= page_path @next_page.lookup_path %>"
-          x-tooltip.theme.lookbook="`Next page`"
-          class="flex-none p-1">
-            <%= render_component :icon, :chevron_right, size: 5, class: "hover:text-indigo-800" %>
-          </a>
-      <% else %>
-        <span class="flex-none p-1">
-          <%= render_component :icon, :chevron_right, size: 5, class: "opacity-20" %>
-        </span>
-      <% end %>
-    </div>
   <div
-    class="h-[calc(100vh_-_40px)] relative"
+    class="h-[calc(100vh_-_40px)]"
     x-data="{}"
     @navigation:complete.window="$refs.scroller.scrollTop = 0">
-   
+  
+    <div class="h-full bg-lookbook-page relative">
+    <% unless @error %>
+      
+      <div class="absolute top-0 right-0 pt-1 pr-0 pl-1 pb-1 rounded-bl-md">
+        <div class="bg-lookbook-page opacity-90 absolute inset-0 w-full h-full z-0"></div>
+        <div class="relative z-10 flex items-center">
+        
+        <% if @previous_page %>
+          <%= render_component :button,
+            size: :lg,
+            icon: :chevron_left,
+            tooltip: "Previous page",
+            href: page_path(@previous_page.lookup_path),
+            class: "pr-0.5 bg-transparent" %>
+        <% else %>
+          <%= render_component :button,
+            size: :lg,
+            icon: :chevron_left,
+            class: "opacity-50 pointer-default hover:text-lookbook-button-text pr-0.5 bg-transparent" %>
+        <% end %>
 
-    <div class="h-full bg-lookbook-page">
+        <% if @next_page %>
+          <%= render_component :button,
+            size: :lg,
+            icon: :chevron_right,
+            tooltip: "Next page",
+            href: page_path(@next_page.lookup_path),
+            class: "pl-0.5 bg-transparent" %>
+        <% else %>
+          <%= render_component :button,
+            size: :lg,
+            icon: :chevron_right,
+            class: "opacity-50 pointer-default hover:text-lookbook-button-text pl-0.5 bg-transparent" %>
+        <% end %>
+        </div>
+      </div>
+    <% end %>
+
       <%= yield %>
     </div>
     
