--- a/app/components/lookbook/filter/component.html.erb
+++ b/app/components/lookbook/filter/component.html.erb
@@ -6,7 +6,7 @@
     placeholder="<%== @placeholder %>"
     x-ref="input"
     x-model="<%= @model %>"
-    x-effect="$dispatch('filter:change', { text })"
+    x-effect="$dispatch('filter:change', { text, filter: this })"
     @keydown.esc="clear"
     @keydown.f.stop.prevent.window="focus"
     @keydown.stop>
