Remove pages feature flag, hide nav if no pages available

--- a/app/components/lookbook/nav/component.html.erb
+++ b/app/components/lookbook/nav/component.html.erb
@@ -3,7 +3,7 @@
   
   <%= render_component :toolbar do |toolbar| %>
     <% toolbar.section padded: true do %>
-      <h4><%= label %></h4>
+      <h4 class="pt-1"><%= label %></h4>
     <% end %>
   <% end %>
 
