--- a/app/components/lookbook/nav/component.html.erb
+++ b/app/components/lookbook/nav/component.html.erb
@@ -7,7 +7,7 @@
     <% end %>
   <% end %>
 
-  <% if filter %>
+  <% if filter && items.any? %>
     <div class="p-2 pb-0">
       <%= filter %>
     </div>
