--- a/app/views/layouts/lookbook/application.html.erb
+++ b/app/views/layouts/lookbook/application.html.erb
@@ -1,107 +1,76 @@
-<%= content_for :body do %>
-  <div
-    id="app"
-    x-data="app"
-    @popstate.window="handleNavigation"
-    @click.document="hijax"
-    @navigation:start="closeMobileSidebar"
-    class="w-screen h-screen grid grid-rows-[40px_1fr] relative">
+<% content_for :shell do %>
+  <%= render_component :split_layout,
+    alpine_data: "$store.layout.main",
+    ":class": "$store.layout.mobile && '!block'" do |layout| %>
 
-    <%= render_component :toolbar do |toolbar| %>
-      <% toolbar.section padded: true do %>
-        <%= render_component :branding,
-          text: config.project_name,
-          href: landing_path if config.project_name %>
-      <% end %>
-      <% toolbar.section padded: true, align: :right do %>
-        <%= render_component :button,
-            icon: :menu,
-            "@click.stop": "toggleSidebar",
-            class: "-mr-2",
-            x_show: "$store.layout.mobile && sidebarHidden" %>
-         <%= render_component :button,
-            icon: :x,
-            "@click.stop": "toggleSidebar",
-            class: "-mr-2",
-            x_show: "$store.layout.mobile && !sidebarHidden",
-            "@keydown.esc.window": "closeMobileSidebar" %>
-      <% end %>
-    <% end %>
-    
-    <%= render_component :split_layout,
-      alpine_data: "$store.layout.main",
-      ":class": "$store.layout.mobile && '!block'" do |layout| %>
+    <% layout.pane class: "flex flex-col bg-lookbook-sidebar relative translate-x-0",
+      ":class": "{
+        'transition': $store.layout.mobile,
+        'translate-x-full': $store.layout.mobile && sidebarHidden,
+        '!absolute right-0 bottom-0 top-[40px] h-[calc(100%_-_40px)] w-full max-w-[420px] z-50 border-l border-lookbook-divider': $store.layout.mobile
+      }",
+      "@click.outside": "closeMobileSidebar",
+      x_cloak: true do %>
 
-      <% layout.pane class: "flex flex-col bg-lookbook-sidebar relative translate-x-0",
-        ":class": "{
-          'transition': $store.layout.mobile,
-          'translate-x-full': $store.layout.mobile && sidebarHidden,
-          '!absolute right-0 bottom-0 top-[40px] h-[calc(100%_-_40px)] w-full max-w-[420px] z-50 border-l border-lookbook-divider': $store.layout.mobile
-        }",
-        "@click.outside": "closeMobileSidebar",
-        x_cloak: true do %>
+      <%= render_component :split_layout, alpine_data: "$store.layout.sidebar" do |layout| %>
+        <% layout.pane class: "overflow-hidden" do %>
+          <%= render_component :nav,
+            collection: Lookbook.previews,
+            alpine_data: "$store.nav.previews",
+            label: "Previews",
+            collapse_singles: true do |nav| %>
+            <% nav.filter store: "$store.nav.previews.filter", placeholder: "Filter by preview name&hellip;" %>
+          <% end %>
+        <% end %>
 
-        <%= render_component :split_layout, alpine_data: "$store.layout.sidebar" do |layout| %>
+        <% if Lookbook.pages.any? %>
           <% layout.pane class: "overflow-hidden" do %>
             <%= render_component :nav,
-              collection: Lookbook.previews,
-              alpine_data: "$store.nav.previews",
-              label: "Previews",
-              collapse_singles: true do |nav| %>
-              <% nav.filter store: "$store.nav.previews.filter", placeholder: "Filter by preview name&hellip;" %>
-            <% end %>
+              collection: Lookbook.pages,
+              alpine_data: "$store.nav.pages",
+              label: "Pages" %>
           <% end %>
-
-          <% if Lookbook.pages.any? %>
-            <% layout.pane class: "overflow-hidden" do %>
-              <%= render_component :nav,
-                collection: Lookbook.pages,
-                alpine_data: "$store.nav.pages",
-                label: "Pages" %>
-            <% end %>
-          <% end %>
-
         <% end %>
 
-        <% if Lookbook::Preview.errors.any? %>
-          <div x-data="{hidden: false}" class="flex-none border-t border-lookbook-divider absolute bottom-0 left-0 right-0" x-show="!hidden">
-            <%= render_component :toolbar do |toolbar| %>
-              <% toolbar.section padded: true, class: "flex items-center" do %>
-                <%= render_component :icon, name: :alert_triangle, size: 4, class: "text-red-700" %>
-                <span class="ml-2">Preview load errors</span>
-              <% end %>
-              <% toolbar.section align: :right do %>
-                <% render_component :button, icon: :x, "@click": "hidden = !hidden" %>
-              <% end %>
-            <% end %>
+      <% end %>
 
-            <div class="h-full max-h-[300px] overflow-hidden">
-              <div class="bg-red-50 w-full overflow-auto h-full">
-                <ul class="text-sm divide-y divide-red-200">
-                  <% Lookbook::Preview.errors.each do |error| %>
-                    <% error = error.is_a?(Lookbook::Error) ? error : Lookbook::Error.new(error) %>
-                    <li class="px-4 py-3">
-                      <h4 class="break-all leading-tight text-xs ">
-                        <%= error.file_name %><%= ":#{error.line_number}" if error.line_number %>
-                      </h4>
-                      <pre class="text-red-800 text-xs mt-2 whitespace-pre-wrap opacity-80 font-mono"><%= error.message %></pre>
-                    </li>
-                  <% end %>
-                </ul>
-              </div>
+      <% if Lookbook::Preview.errors.any? %>
+        <div x-data="{hidden: false}" class="flex-none border-t border-lookbook-divider absolute bottom-0 left-0 right-0" x-show="!hidden">
+          <%= render_component :toolbar do |toolbar| %>
+            <% toolbar.section padded: true, class: "flex items-center" do %>
+              <%= render_component :icon, name: :alert_triangle, size: 4, class: "text-red-700" %>
+              <span class="ml-2">Preview load errors</span>
+            <% end %>
+            <% toolbar.section align: :right do %>
+              <% render_component :button, icon: :x, "@click": "hidden = !hidden" %>
+            <% end %>
+          <% end %>
+
+          <div class="h-full max-h-[300px] overflow-hidden">
+            <div class="bg-red-50 w-full overflow-auto h-full">
+              <ul class="text-sm divide-y divide-red-200">
+                <% Lookbook::Preview.errors.each do |error| %>
+                  <% error = error.is_a?(Lookbook::Error) ? error : Lookbook::Error.new(error) %>
+                  <li class="px-4 py-3">
+                    <h4 class="break-all leading-tight text-xs ">
+                      <%= error.file_name %><%= ":#{error.line_number}" if error.line_number %>
+                    </h4>
+                    <pre class="text-red-800 text-xs mt-2 whitespace-pre-wrap opacity-80 font-mono"><%= error.message %></pre>
+                  </li>
+                <% end %>
+              </ul>
             </div>
           </div>
-        <% end %>
+        </div>
       <% end %>
-
-      <% layout.pane class: "overflow-hidden", ":class": "$store.layout.mobile && 'w-screen'" do %>
-        <%= content_for?(:main) ? yield(:main) : yield %>
-      <% end %>
-
     <% end %>
-    <div class="absolute opacity-0 bg-black inset-0 top-[40px] z-[-1] transition-opacity" :class="($store.layout.mobile && !sidebarHidden) && '!opacity-30 !z-40'" data-cloak></div>
-  </div>
-  
+
+    <% layout.pane class: "overflow-hidden", ":class": "$store.layout.mobile && 'w-screen'" do %>
+      <%= content_for?(:main) ? yield(:main) : yield %>
+    <% end %>
+
+  <% end %>
+  <div class="absolute opacity-0 bg-black inset-0 top-[40px] z-[-1] transition-opacity" :class="($store.layout.mobile && !sidebarHidden) && '!opacity-30 !z-40'" data-cloak></div>
 <% end %>
 
-<%= render template: "layouts/lookbook/skeleton" %>
+<%= render template: "layouts/lookbook/shell" %>
