--- a/app/views/lookbook/preview.html.erb
+++ b/app/views/lookbook/preview.html.erb
@@ -1,5 +1,6 @@
-<% if rendered_examples.many? %>
-  <% rendered_examples.each do |example| %>
+<% if examples.many? %>
+  <%# Render a group of examples %>
+  <% examples.each do |example| %>
     <div style="all: unset; margin-bottom: 30px; display: block;">
       <h6 style="all: unset; display: block; color: #999; font-family: sans-serif; font-size: 14px; margin-top: 0; margin-bottom: 10px;">
         <%= example[:label] %>
@@ -8,9 +9,6 @@
     </div>
   <% end %>
 <% else %>
-  <%= rendered_examples.first[:html] %>
-<% end %>
-
-<% if params[:lookbook_embed] == "true" %>
-  <script src="/lookbook-assets/js/embed.js?v=<%= Lookbook.version %>" defer></script>
+  <%# Render a single example %>
+  <%= examples.first[:html] %>
 <% end %>
